syntax = "proto3";

package nodegrpc;

service NodeGrpc {
    rpc EchoMethod(EchoRequest) returns (EchoResponse) {}
}

message EchoRequest {
    string message = 1;
}

message EchoResponse {
    string message = 1;
}
